I set the style for item number section

--- a/web-flair/app/sass/blocks/product-info/_product-info.sass
+++ b/web-flair/app/sass/blocks/product-info/_product-info.sass
@@ -155,6 +155,11 @@
 	flex: 0 0 48%
 	margin-bottom: 30px
 
+.product-info__item
+	font-size: 13px
+	font-family: $semi-bold
+	text-transform: uppercase
+			
 .product-info__share
 	display: flex
 	font-size: 13px
