I changed the css style on the share section

--- a/sections/product_detail_information.liquid
+++ b/sections/product_detail_information.liquid
@@ -208,7 +208,7 @@
                                         <a href="#" class="product-info__button-preview button-preview button-preview_with_image button-preview_dark button-preview_size_sm">Compare <img class="button-preview__image" src="{{ 'compare.png' | asset_url }}" alt="compare"></a>
                                     </div>
 
-                                    <div class="product-info__share_container d-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex  justify-content-between">
+                                    <div class="product-info__share_container d-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex  justify-content-between align-items-center">
                                         <div class="product-info__item">
                                            ITEM NUMBER {{ product.metafields["global"]["product_id"] }}
                                         </div>
