--- a/web-flair/app/sass/blocks/accordion/_accordion.sass
+++ b/web-flair/app/sass/blocks/accordion/_accordion.sass
@@ -50,3 +50,24 @@
 	ul
 		li
 			list-style-type: disc 
+	.accordion__content__title
+		font-family: $bold
+		font-size: 36px
+		margin-top: 1rem
+		padding-left: 25px
+
+	.accordion__content__image
+		height: 300px
+		background-size: cover
+	
+	.accordion__content__description
+		padding-left: 25px
+
+		ul
+			list-style-image: url(v_blue.png)
+			li				
+				list-style-type: none			
+				margin-bottom: 20px								
+
+
+
