--- a/web-flair/app/sass/blocks/product-info/_product-info.sass
+++ b/web-flair/app/sass/blocks/product-info/_product-info.sass
@@ -180,3 +180,20 @@
 	transition: opacity .25s ease
 	&:hover
 		opacity: .5
+
+.product-info__diagonal-line
+	background-color: #fff	
+	display: none
+	height: 100%
+	left: 0	
+	opacity: 0.5
+	position: absolute	
+	top: 0
+	width: 100%
+
+	line 
+		stroke: #A9BCCA
+		stroke-width: 3
+
+
+	
